feat: in-built c/c++ compiler & Java version 11,17 fixed